# po-formulas-software-dev

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.claude/commands/: agentic.md
.claude/planning/iter-1/: iter-1-lessons-learned.md
.planning/software-dev-full/po-formulas-software-dev-u1b/: build-iter-1.diff  build-iter-2.diff  decision-log.md
parent/: README.md  pyproject.toml
parent/docs/: soloco-strict-product-mode.md
parent/evals/: README.md  agentic-epic-acceptance-cases.json  agentic-prompt-contract-cases.json  agentic-sizing-cases.json  run_agentic_epic_acceptance_evals.py  run_agentic_prompt_contract_evals.py  run_agentic_proof_smoke.py  run_verified_delivery_dogfood.py
parent/overlay/: CLAUDE-software-dev.md
parent/po_formulas/: __init__.py  agentic.py  agentic_epic.py  agentic_sizing.py  code_health.py  commands.py  delivery_truth.py  epic.py  epic_finalize.py  graph.py  minimal_task.py  shared_branch.py  software_dev.py  verified_delivery.py
parent/po_formulas/agents/agentic-conflict-resolver/: prompt.md  task.md
parent/po_formulas/agents/agentic-design-review/: prompt.md  task.md
parent/po_formulas/agents/agentic-epic-acceptance-critic/: prompt.md  task.md
parent/po_formulas/agents/agentic-epic-brainstorm/: prompt.md  task.md
parent/po_formulas/agents/agentic-epic-plan-critic/: prompt.md  task.md
parent/po_formulas/agents/agentic-epic-planner/: prompt.md  task.md
parent/po_formulas/agents/agentic-epic-prd/: prompt.md  task.md
parent/po_formulas/agents/agentic-merge-back/: prompt.md  task.md
parent/po_formulas/agents/agentic-reviewer/: prompt.md  task.md
parent/po_formulas/agents/agentic-sizer/: prompt.md  task.md
parent/po_formulas/agents/agentic-worker/: prompt.md  task.md
parent/po_formulas/agents/baseline/: prompt.md  task.md
parent/po_formulas/agents/build-critic/: task.md
parent/po_formulas/agents/builder/: prompt.md  task.md
parent/po_formulas/agents/code-health-reviewer/: prompt.md  task.md
parent/po_formulas/agents/demo-video/: prompt.md  task.md
parent/po_formulas/agents/deploy-smoke/: prompt.md  task.md
parent/po_formulas/agents/documenter/: prompt.md  task.md
parent/po_formulas/agents/full-test-gate/: prompt.md  task.md
parent/po_formulas/agents/learn/: prompt.md  task.md
parent/po_formulas/agents/linter/: prompt.md
parent/po_formulas/agents/plan-critic/: prompt.md
parent/po_formulas/agents/planner/: task.md
parent/po_formulas/agents/ralph/: task.md
parent/po_formulas/agents/regression-gate/: prompt.md
parent/po_formulas/agents/review-artifacts/: prompt.md  task.md
parent/po_formulas/agents/tester/: config.toml  task.md
parent/po_formulas/agents/triager/: prompt.md  task.md
parent/po_formulas/agents/verifier/: prompt.md  task.md
parent/tests/: test_agentic_epic.py  test_agentic_epic_prompts.py  test_agentic_flow.py  test_agentic_gates.py  test_agentic_preview.py  test_agentic_prompt_contract_evals.py  test_agentic_prompts.py  test_agentic_sizing.py  test_agentic_verified_delivery.py  test_agentic_wts.py  test_commands_planning_init.py  test_delivery_truth.py  test_epic_discover_flags.py  test_epic_legacy_dot_suffix.py  test_graph.py  test_po_env_loader.py  test_shared_branch.py  test_software_dev_complexity_log.py  test_software_dev_edit.py  test_software_dev_fail_closed.py  test_software_dev_fast.py  test_software_dev_pack_path_metadata.py  test_verdict_write_prompts.py  test_verified_delivery.py  test_write_verdict_command.py
po_formulas/: __init__.py  code_health.py  deployments.py  epic.py  graph.py  software_dev.py
po_formulas/agents/build-critic/: prompt.md
po_formulas/agents/deploy-smoke/: task.md
standards/learnings/: README.md
tests/: test_epic_discover_flags.py  test_graph.py  test_software_dev_flow_outcome.py  test_software_dev_optin_flags.py  test_software_dev_scoped_tests.py  test_tag_flow_run.py
wts/: README.md  pyproject.toml
wts/.claude/planning/Layer-2/: Layer-2-lessons-learned.md
wts/.claude/planning/iter-2/: iter-2-lessons-learned.md
wts/.claude/planning/layer-1/: layer-1-lessons-learned.md
wts/.claude/planning/layer-2/: layer-2-lessons-learned.md
wts/evals/: README.md  run.sh
wts/po_formulas_wts/: __init__.py  agentic.py  checks.py  commands.py  deployments.py  epic.py  epic_finalize.py  epic_wts.py  graph.py  minimal_task.py  pr_writer.py  pre_pr_review.py  software_dev.py  worktree.py
wts/po_formulas_wts/agents/baseline/: prompt.md
wts/po_formulas_wts/agents/build-critic/: prompt.md
wts/po_formulas_wts/agents/builder/: prompt.md  task.md
wts/po_formulas_wts/agents/demo-video/: prompt.md
wts/po_formulas_wts/agents/deploy-smoke/: prompt.md
wts/po_formulas_wts/agents/documenter/: prompt.md
wts/po_formulas_wts/agents/full-test-gate/: prompt.md
wts/po_formulas_wts/agents/learn/: prompt.md
wts/po_formulas_wts/agents/linter/: prompt.md  task.md
wts/po_formulas_wts/agents/plan-critic/: prompt.md
wts/po_formulas_wts/agents/planner/: prompt.md  task.md
wts/po_formulas_wts/agents/pr-writer/: pr-format-template.md  prompt.md  task.md
wts/po_formulas_wts/agents/pre-pr-reviewer/: prompt.md  task.md
wts/po_formulas_wts/agents/pre-pr-smoke-tester/: prompt.md  task.md
wts/po_formulas_wts/agents/ralph/: prompt.md  task.md
wts/po_formulas_wts/agents/regression-gate/: prompt.md  task.md
wts/po_formulas_wts/agents/review-artifacts/: prompt.md  task.md
wts/po_formulas_wts/agents/spec-auditor/: prompt.md  task.md
wts/po_formulas_wts/agents/tester/: prompt.md  task.md
wts/po_formulas_wts/agents/triager/: prompt.md  task.md
wts/po_formulas_wts/agents/verifier/: prompt.md  task.md
wts/po_formulas_wts/prompts/: mail.md
wts/tests/: test_epic_wts.py  test_pack_skeleton.py  test_pre_pr_review.py  test_software_dev_edit.py  test_software_dev_flow_outcome.py  test_software_dev_worktree.py  test_worktree.py  test_wts_formula_promotion.py
wts/tests/fixtures/: pillar-2-critique-3-findings.md
(+10 files in other folders)
