[project]
name = "po-formulas-software-dev-wts"
version = "0.1.0"
description = "(worktree-aware variant) po formula pack: actor-critic software development pipeline (plan/build/review/verify/ralph)"
requires-python = ">=3.11"
dependencies = [
    "prefect-orchestration",
    "prefect>=3.0",
]

# ─── Entry points ── core's `po list` / `po run <name>` auto-discover these.
# This pack registers ONLY the two -wts formula keys; epic / graph /
# minimal-task / [po.deployments] / [po.doctor_checks] / [po.commands]
# stay with the source `po-formulas-software-dev` pack to avoid EP-key
# collisions in a single venv.
[project.entry-points."po.formulas"]
software-dev-full-wts = "po_formulas_wts.software_dev:software_dev_full"
software-dev-fast-wts = "po_formulas_wts.software_dev:software_dev_fast"
software-dev-edit-wts = "po_formulas_wts.software_dev:software_dev_edit"
epic-finalize-wts = "po_formulas_wts.epic_finalize:epic_finalize"
pre-pr-review-wts = "po_formulas_wts.pre_pr_review:pre_pr_review"
pr-writer = "po_formulas_wts.pr_writer:pr_writer"
# Full epic-producing machine — auto-chains epic_run → pre_pr_review
# → epic_finalize → pr_writer in one invocation. See
# po_formulas_wts/epic_wts.py + prefect-orchestration-54n.
epic-wts = "po_formulas_wts.epic_wts:epic_wts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["po_formulas_wts"]

# Install this pack alongside core during development:
#   uv add --editable ../prefect-orchestration
#   uv add --editable .
#
# Then from any beads-initialized rig:
#   po list   # shows software-dev-full-wts and software-dev-fast-wts

[tool.uv.sources]
# Path is relative to this pyproject.toml — works when this repo is
# cloned as a sibling of prefect-orchestration (canonical layout).
prefect-orchestration = { path = "../../prefect-orchestration", editable = true }
